Fixed filters and added action for visibility icon

--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -9894,3 +9894,7 @@ html body .app.flex-row.align-items-center {
 .text-bold {
   font-weight: bold;
 }
+
+.pointer {
+  cursor: pointer;
+}
